--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta property="og:title" content="Guia do Aspirate" />
         <meta property="og:type" content="website" />
         <meta property="og:url" content="https://www.imdb.com/title/tt0117500/" />
-        <meta property="og:image" content="https://ia.media-imdb.com/images/rock.jpg" />
+        <meta property="og:image" content="https://static.wixstatic.com/media/3d3594_ab65e0b1dd8f4e89835a86ab862caa14~mv2.jpg/v1/fit/w_2500,h_1330,al_c/3d3594_ab65e0b1dd8f4e89835a86ab862caa14~mv2.jpg" />
     </head>
     <body>
 
