--- a/Modulo2/Aula9/exercicio1.html
+++ b/Modulo2/Aula9/exercicio1.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-br" prefix="og: https://ogp.me/ns#">
     <head>
+        <title>A Ligação</title>
         <meta property="og:title" content="Jogo A Ligação" />
         <meta property="og:description" content="Projeto criado pela turma Lovelace de aspirantes a AlphaEdTech." />
         <meta property="og:type" content="website" />
