--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>
             L. G. C. Z. P. - GUIA do Aspirante
         </title>
-        <meta property="og:title" content="Guia do Aspirate" />
+        <meta property="og:title" content="Guia do Aspirate 2" />
         <meta property="og:type" content="website" />
         <meta property="og:url" content="https://luisgustavoczp.github.io/my_first_steps/Modulo2/Aula9/exercicio1.html" />
         <meta property="og:image" content="https://lh3.googleusercontent.com/proxy/UrJtiIvC_OrcQ7fWjwLpwIUBTu2NWg2VQhu-vMM0lSYkXbgv7r6V8f-XOYdTLhy9US-cvA-BM4iv0FbYg4kvH1wh7bAbeYYhuvpPX3TaLyuk9M0jO2UqESU7qy-0lw" />
