--- a/Modulo2/Aula10/exercicio2.html
+++ b/Modulo2/Aula10/exercicio2.html
@@ -1,31 +1,31 @@
 <!DOCTYPE html>
 <html lang="pt-br" prefix="og: https://ogp.me/ns#">
     <head>
-        <title>Gameplay Mobile Legends : Gloo</title>
-        <meta property="og:title" content="Gameplay Gloo" />
-        <meta property="og:description" content="Lutar" />
-        <meta property="og:audio" content="https://example.com/sound.mp3" />
-        <meta property="og:audio:secure_url" content="thefarat-arcadia-charpter2.ogg" />
-        <meta property="og:audio:type" content="audio/ogg" />
-        <meta property="og:url" content="https://luisgustavoczp.github.io/my_first_steps/Modulo2/Aula10/exercicio1.html" />
+        <title>A Ligação</title>
+        <meta property="og:title" content="Site de sistemas" />
+        <meta property="og:description" content="Projeto criado pela turma Lovelace de aspirantes a AlphaEdTech." />
+        <meta property="og:type" content="website" />
+        <meta property="og:url" content="https://luisgustavoczp.github.io/my_first_steps/Modulo2/Aula9/exercicio1.html" />
         <meta property="og:image" content="arcadia.jpg" />
         <meta property="og:image:width" content="300" />
         <meta property="og:image:height" content="300" />
     </head>
     <body style="display: flex; flex-direction: column; align-content: center;">
-        <h1 style="text-align: center;">Musicas sem copyright</h1>
-        
+        <h1 style="text-align: center;">Gameplay Mobile Legends : Gloo</h1>
+        <video id="videoplayer" poster="arcadia.jpg" height="400" controls>
+            Desculpa, o seu navegador não suporta vídeos incorporados
+        </video>
+        <button id="videobutton" onclick="nextVideo ()">Proximo</button>
         <section id="audiosector" style="display:flex; align-self: center;">
-            <h4>Ouça apenas a musica </h4>
+            <h4>Ouça apenas a musica</h4>
             <audio id="audioplayer" src="thefatrat-arcadia-chapter2.ogg" controls>
                 O seu navegador não suporta o elemento <code>audio</code>.
             </audio>
-            <button id="videobutton" onclick="nextVideo ()">Proxima</button>
         </section>
-        
     </body>
     <script>
-        var audios = ["mobilelegendsgloo.mp4", "mobilelegendsgloo0.mp4"];
+        var videos = ["mobilelegendsgloo.mp4", "mobilelegendsgloo0.mp4", "mobilelegendsgloo1.mp4", "mobilelegendsgloo2.mp4", "mobilelegendsgloo3.mp4", "mobilelegendsgloo4.mp4"];
+        var videoPlayer = document.getElementById("videoplayer");
         var audioPlayer = document.getElementById("audioplayer");
         //var videoNextButton = document.getElementById("videobutton");
         var audioSector = document.getElementById("audiosector");
