--- a/Modulo2/Aula10/exercicio1.html
+++ b/Modulo2/Aula10/exercicio1.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="pt-br" prefix="og: https://ogp.me/ns#">
     <head>
-        <title>Gameplay Mobile Legends : Gloo</title>
-        <meta property="og:title" content="Gameplay Gloo" />
-        <meta property="og:description" content="Lutar" />
+        <title>Musicas sem copyright</title>
+        <meta property="og:title" content="Musicas sem copyright" />
+        <meta property="og:description" content="Baixe musicas" />
         <meta property="og:audio" content="https://example.com/sound.mp3" />
         <meta property="og:audio:secure_url" content="thefarat-arcadia-charpter2.ogg" />
         <meta property="og:audio:type" content="audio/ogg" />
@@ -17,15 +17,14 @@
         
         <section id="audiosector" style="display:flex; align-self: center;">
             <h4>Ouça apenas a musica </h4>
-            <audio id="audioplayer" src="thefatrat-arcadia-chapter2.ogg" controls>
+            <audio id="audioplayer" controls>
                 O seu navegador não suporta o elemento <code>audio</code>.
             </audio>
             <button id="videobutton" onclick="nextVideo ()">Proxima</button>
         </section>
-        
     </body>
     <script>
-        var audios = ["mobilelegendsgloo.mp4", "mobilelegendsgloo0.mp4"];
+        var audios = ["thefatrat-arcadia-chapter2.ogg", "thefatrat-timelapse.mp3"];
         var audioPlayer = document.getElementById("audioplayer");
         //var videoNextButton = document.getElementById("videobutton");
         var audioSector = document.getElementById("audiosector");
