--- a/Modulo2/Aula10/exercicio2.html
+++ b/Modulo2/Aula10/exercicio2.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
 <html lang="pt-br" prefix="og: https://ogp.me/ns#">
     <head>
-        <title>A Ligação</title>
-        <meta property="og:title" content="Site de sistemas" />
-        <meta property="og:description" content="Projeto criado pela turma Lovelace de aspirantes a AlphaEdTech." />
-        <meta property="og:type" content="website" />
-        <meta property="og:url" content="https://luisgustavoczp.github.io/my_first_steps/Modulo2/Aula9/exercicio1.html" />
+        <title>Gameplay Mobile Legends : Gloo</title>
+        <meta property="og:title" content="Gameplay Mobile Legends : Gloo" />
+        <meta property="og:description" content="Um video divertido com os melhores momentos de duas gameplays com o herói Gloo." />
+        <meta property="og:type" content="video.other" />
+        <meta property="og:url" content="https://luisgustavoczp.github.io/my_first_steps/Modulo2/Aula10/exercicio2.html" />
         <meta property="og:image" content="arcadia.jpg" />
         <meta property="og:image:width" content="300" />
         <meta property="og:image:height" content="300" />
     </head>
     <body style="display: flex; flex-direction: column; align-content: center;">
         <h1 style="text-align: center;">Gameplay Mobile Legends : Gloo</h1>
+        <p style="text-align: center;">Um video divertido com os melhores momentos de duas gameplays com o herói Gloo.</p>
         <video id="videoplayer" poster="arcadia.jpg" height="400" controls>
             Desculpa, o seu navegador não suporta vídeos incorporados
         </video>
