--- a/Modulo2/Aula10/exercicio1.html
+++ b/Modulo2/Aula10/exercicio1.html
@@ -4,8 +4,7 @@
         <title>Musicas sem copyright</title>
         <meta property="og:title" content="Musicas sem copyright" />
         <meta property="og:description" content="Baixe musicas" />
-        <meta property="og:audio" content="https://example.com/sound.mp3" />
-        <meta property="og:audio:secure_url" content="thefarat-arcadia-charpter2.ogg" />
+        <meta property="og:audio" content="thefarat-arcadia-charpter2.ogg" />
         <meta property="og:audio:type" content="audio/ogg" />
         <meta property="og:url" content="https://luisgustavoczp.github.io/my_first_steps/Modulo2/Aula10/exercicio1.html" />
         <meta property="og:image" content="arcadia.jpg" />
