--- a/Modulo2/Aula10/exercicio1.html
+++ b/Modulo2/Aula10/exercicio1.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-br" prefix="og: https://ogp.me/ns#">
     <head>
+        <meta charset="utf-8">
         <title>Musicas sem copyright</title>
         <meta property="og:title" content="Musicas sem copyright" />
         <meta property="og:description" content="Baixe musicas" />
