--- a/Modulo2/Aula10/exercicio2.html
+++ b/Modulo2/Aula10/exercicio2.html
@@ -49,7 +49,7 @@
         videoPlayer.onended = onVideoEnded;
         audioPlayer.onended = onAudioEnded;
 
-        videoPlayer.src = videos[videoNumber++];
+        //videoPlayer.src = videos[videoNumber++];
         localStorage.setItem("gameplaynumber", videoNumber);
 
         function onVideoPlay (evt)
