--- a/Modulo2/Aula10/exercicio2.html
+++ b/Modulo2/Aula10/exercicio2.html
@@ -56,7 +56,7 @@
         {
             pause = false;
             audioPlayer.play();
-            videoPlayer.playbackRate = 2;
+            //videoPlayer.playbackRate = 2;
             //audioSector.setAttribute("hidden", "");
         }
 
