--- a/Modulo2/Aula10/exercicio2.html
+++ b/Modulo2/Aula10/exercicio2.html
@@ -32,6 +32,7 @@
         if(lstorage != null)
         {
             videoNumber = parseInt(lstorage);
+            console.log(videoNumber);
         }
         
         var videos = ["mobilelegendsgloo.mp4", "mobilelegendsgloo0.mp4", "mobilelegendsgloo1.mp4", "mobilelegendsgloo2.mp4", "mobilelegendsgloo3.mp4", "mobilelegendsgloo4.mp4"];
@@ -46,11 +47,23 @@
         //videoPlayer.oncanplay = onVideoCanPlay;
         videoPlayer.onplay = onVideoPlay;
         
-        videoPlayer.onended = onVideoEnded;
+        videoPlayer.onended = nextVideo;
         audioPlayer.onended = onAudioEnded;
+        videoPlayer.playbackRate = 2;
 
-        //videoPlayer.src = videos[videoNumber++];
-        localStorage.setItem("gameplaynumber", videoNumber);
+        PlayVideo();
+
+        function PlayVideo ()
+        {
+            if(videoNumber >= videos.length) 
+            {
+                videoNumber = 0;
+                videoPlayer.src = videos[videoNumber];
+                return false;
+            }
+            videoPlayer.src = videos[videoNumber];
+            return true;
+        } Boolean;
 
         function onVideoPlay (evt)
         {
@@ -67,15 +80,6 @@
             //audioSector.removeAttribute("hidden");
         }
 
-        function onVideoEnded (evt)
-        {
-            audioPlayer.pause();
-            if(videoNumber >= videos.length) videoNumber = 0;
-            videoPlayer.src = videos[videoNumber++];
-            localStorage.setItem("gameplaynumber", videoNumber);
-            videoPlayer.play();
-        }
-
         function onAudioEnded (evt)
         {
             audioPlayer.play();
@@ -85,13 +89,12 @@
 
         function nextVideo ()
         {
-            if(videoNumber >= videos.length) videoNumber = 0;
-            videoPlayer.src = videos[videoNumber++];
+            audioPlayer.pause();
+            //if(videoNumber >= videos.length) videoNumber = 0;
+            if(PlayVideo()) videoNumber++;
+            //videoPlayer.src = videos[videoNumber];
+            localStorage.setItem("gameplaynumber", videoNumber);
             videoPlayer.play();
-            //pause = !pause;
-            //videoButton.textContent = pause ? "Play" : "Pause";
-            //if(!pause) videoPlayer.play();
-            //else videoPlayer.pause();
         }
     </script>
 </html>
