--- a/Modulo2/Aula11/exercicio2.html
+++ b/Modulo2/Aula11/exercicio2.html
@@ -23,10 +23,10 @@
     <body>
         <h1>Exercicio 2</h1>
         <h3>Exemplo de IFrame Remoto</h3>
-        <!--<iframe src=" https://itch.io/embed/1141302" frameborder=0>
+        <iframe src=" https://itch.io/embed/1141302" frameborder=0>
             A pagina não pode ser exibida
             <a href="https://luiszanetti.itch.io/o-cair-da-noite">O Cair da Noite by LuisZanetti</a>
-        </iframe>-->
+        </iframe>
     </body>
     <script>
 
