--- a/index.html
+++ b/index.html
@@ -2,20 +2,30 @@
 <html prefix="og: https://ogp.me/ns#">
     <head>
         <title>
-            L. G. C. Z. P. - GUIA do Aspirante
+            L. G. C. Z. P. - Trilha do Aspirante
         </title>
-        <meta property="og:title" content="Guia do Aspirate 2" />
+        <meta property="og:title" content="Trilha do Aspirate" />
+        <meta property="og:description" content="Toda a trilha que percorri até aqui." />
+        <meta property="og:author" content="Luis Gustavo C. Z. P." />
         <meta property="og:type" content="website" />
         <meta property="og:url" content="https://luisgustavoczp.github.io/my_first_steps/Modulo2/Aula9/exercicio1.html" />
-        <meta property="og:image" content="https://lh3.googleusercontent.com/proxy/UrJtiIvC_OrcQ7fWjwLpwIUBTu2NWg2VQhu-vMM0lSYkXbgv7r6V8f-XOYdTLhy9US-cvA-BM4iv0FbYg4kvH1wh7bAbeYYhuvpPX3TaLyuk9M0jO2UqESU7qy-0lw" />
+        <meta property="og:image" content="images/logo-alpha-edtech.png" />
         <meta property="og:image:width" content="300" />
         <meta property="og:image:height" content="300" />
     </head>
     <body>
-       
+       <header>
+
+       </header>
+       <main>
+
+       </main>
+       <footer>
+
+       </footer>
     </body>
-
     <script>
-
+        var fs = new FileSystem();
+        var directoryReader = FileSystemDirectoryEntry.createReader();
     </script>
 </html>
