--- a/hardskills/modulohtml/aula12/exercicio2.html
+++ b/hardskills/modulohtml/aula12/exercicio2.html
@@ -71,9 +71,9 @@
                 var px = t.x;
                 var py = t.y;
                 var bullet = document.createElementNS(xmlns, "circle");
-                view.appendChild(bullet);
-                bullet.setAttribute("cx", px+15+"");
-                bullet.setAttribute("cy", py+"");
+                nave.appendChild(bullet);
+                bullet.setAttribute("cx", "15");
+                bullet.setAttribute("cy", "0");
                 bullet.setAttribute("r", "5");
                 bullet.setAttribute("stroke", "black");
                 bullet.setAttribute("fill", "red");
