update animation sprite

--- a/hardskills/modulohtml/aula13/aprendendo.html
+++ b/hardskills/modulohtml/aula13/aprendendo.html
@@ -18,10 +18,10 @@
             let defaultFrame = new SpriteFrame(16,16,1);
             var gameObjetos = 
             [
-                new DynamicObjeto(new GOSprite(defaultFrame, "sprites/tilemap_packed.png", 24), 0, 0, 64, 0, false, 2, 1),
-                new DynamicObjeto(new GOSprite(defaultFrame, "sprites/tilemap_packed.png", 105), 250, 50, 64, 0, false, 2, 3), 
-                new DynamicObjeto(new GOSprite(defaultFrame, "sprites/tilemap_packed.png", 186), 50, 250, 64, 0, false, 2, .5),
-                new DynamicObjeto(new GOSprite(defaultFrame, "sprites/tilemap_packed.png", 267), 50, 50, 64, 0, false, 3, 1),
+                new DynamicObjeto(new AnimatedSprite(defaultFrame, "sprites/tilemap_packed.png", 23), 0, 0, 64, 0, false, 2, 1),
+                new DynamicObjeto(new AnimatedSprite(defaultFrame, "sprites/tilemap_packed.png", 104), 250, 50, 64, 0, false, 2, 3), 
+                new DynamicObjeto(new AnimatedSprite(defaultFrame, "sprites/tilemap_packed.png", 185), 50, 250, 64, 0, false, 2, .5),
+                new DynamicObjeto(new AnimatedSprite(defaultFrame, "sprites/tilemap_packed.png", 266), 50, 50, 64, 0, false, 3, 1),
             ];
             tiles = [
                 new PhysicObjeto(new GOSprite(defaultFrame, "sprites/tilemap_packed.png", 0), 0, 0, 64, 0, true),
