--- a/hardskills/modulohtml/aula14/mapcreation.html
+++ b/hardskills/modulohtml/aula14/mapcreation.html
@@ -1,4 +1,9 @@
-<!DOCTYPE>
-<html>
+<div class="menu__windowbox__child">
+    <div class="menu__windowbox__container">
+        <h2>Criação de mapa</h2>
+        <button>
+            Criar
+        </button>
+    </div>
     
-</html>
+</div>
