--- a/hardskills/modulohtml/aula18/subpages/contato.html
+++ b/hardskills/modulohtml/aula18/subpages/contato.html
@@ -1,7 +1,7 @@
 <div style="display:flex; flex-direction: column;">
     <h2>Contate-nos</h2>
     <div style="display:block; flex-direction: row; justify-content: center;">
-        <h4>A <b>BrasilPK</b> oferece diversas formas de contato com nossos consumidores:</h4>
+        <h4>A <b>Tabajara Tecnologies</b> oferece diversas formas de contato com nossos consumidores:</h4>
         <ul>
             <li><b>Oração</b>: Está entre os metodos mais práticos, e geralmente é a solução que mais resolve.</li>
             <li><b>Carta</b>: Para termos um contato mais direto com vocês disponibilizamos cartas.</li>
