--- a/hardskills/modulohtml/aula18/index.html
+++ b/hardskills/modulohtml/aula18/index.html
@@ -8,7 +8,11 @@
     </head>
     <body>
         <header>
-            <h1>Mercadroid Web</h1>
+            <span>
+                <img src="images/MercadroidLogo.svg"/>
+                <h1>ercadroid Web</h1>
+                <img src="images/SeloSeuCreyson.png"/>
+            </span>
             <p>Seu especialista pessoal em economia doméstica</p>
             <nav>
                 <button onclick="UpdateSubPage(0)">Home</button>
@@ -21,7 +25,7 @@
             
         </main>
         <footer>
-            Todos os direitos reservados a BrasilPK
+            Todos os direitos reservados a <b>Tabajara Tecnologies</b>
         </footer>
         <script>
             var subpageContainer = document.getElementById("subpage-container");
