--- a/hardskills/modulohtml/aula18/subpages/home.html
+++ b/hardskills/modulohtml/aula18/subpages/home.html
@@ -3,7 +3,7 @@
     <div style="display:block; flex-direction: row; justify-content: center;">
         <h4>A <b>Tabajara Tecnologies</b> lança seu mais novo produto para ajudar você!</h4>
         <ul>
-            <li>Você que não sabe mais o que fazer com o <b>mercador tão caro</b>.</li>
+            <li>Você que não sabe mais o que fazer com o <b>mercado tão caro</b>.</li>
             <li>Você que não tem ideia de como comprar os <b>produtos mais baratos</b>.</li>
             <li>Você que quer aprender a ter <b>uma melhor vida financeira</b>.</li>
             
