--- a/hardskills/modulohtml/aula18/exercicio2/index.html
+++ b/hardskills/modulohtml/aula18/exercicio2/index.html
@@ -3,12 +3,60 @@
     <head>
         <meta charset="UTF-8" />
         <title>Aula 18 - Exercicio 2</title>
-        <link rel="stylesheet" href="styles/defaultStyle.css">
-        <script src="scripts/loadobject.js"></script>
+        
+        <link href="http://fonts.cdnfonts.com/css/globotipo-condensada" rel="stylesheet">
+        <link rel="stylesheet" href="styles/main.css">
     </head>
     <body>
-        <header></header>
-        <main></main>
-        <footer></footer>
+        <header>
+            <span>
+            <h1>Jornal</h1>
+            <h1>Jornal</h1>
+            </span>
+            <img src="images/jornaljornal.png" />
+            <span>
+                <q>O jornal que é mais jornal que o jornal que você compra na banca de jornal!</q>
+                <p>Wallace e Marcia J.</p>
+                <iframe src="https://open.spotify.com/embed/track/3ApODkZRvVrvj2v2UbbMUL?utm_source=generator&amp;theme=0" height="80" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+            </span>
+        </header>
+        <main>
+            <article>
+                <h2>Charlinho, o menino que só queria estudar</h2>
+                <section>
+                    <img src="images/charlinhoentrevista.jpg">
+                    <div>
+                        <p>Começamos a nossa historia no interior do Acre, onde mora um brasileirinho muito esforçado.</p>
+                        <p>Cheio de sonhos e desafios, esse é Charlinho, o menino que só quer estudar.</p>
+                        <p>Para <span>ganhar audiência</span> mostrar a determinação e a garra desse pobre menino vamos segui-lo em um dia no seu árduo caminho até a escola.</p>
+                    </div>
+                </section>
+                <section>
+                    <div>
+                        <p>Charlinho passa todo dia por um caminho de pedras e cacos de vidro para chegar em seu destinho.</p>
+                        <p>Ele faz isso descalço, o pobre garoto aparenta ter os pés cascudos e sua determinação o mantém indiferente a todos os desafios em seu caminho.</p>
+                        <p>Nós assistimos todo esse triste trajeto <span>comendo um Ruffles</span> com o coração na mão...</p>
+                    </div>
+                    <img src="images/charlinhocaminhando.gif">
+                </section>
+                <section>
+                    <img src="images/charlinhorio.gif">
+                    <div>
+                        <p>Chegamos até um rio <span>cheio de piranhas</span> na divisa com o Amazonas, o qual fica na metade do caminho até a escola.</p>
+                        <p>Qualquer um de nós ficaria triste, cabisbaixo, desmotivado... mas não Charlinho!</p>
+                        <p>Ele atravassa o rio sem se importar de ter alguns leves arranhões <span>como perder um dedinho</span></p>
+                        <p>Mas com sua garra homérica, este pobre menino segue fielmente aos seus principios.</p>
+                    </div>
+                </section>
+                <section>
+                    <img src="images/charlinhomachucado.jpg">
+                    <div>
+                        <p>Após chegar a outra margem do rio vemos Charlinho <span>sangrando</span> tranquilo e pronto pra outra!</p>
+                        <p>E assim encerramos a epopéia de charlinho, esse menino incrível e dedicado que segue agora a outra metade do caminho sozinho, pois tivemos <span>muitos gastos com Ruffles e casas noturnas na região</span> um imprevisto e não pudemos seguir com a reportagem.</p>
+                    </div>
+                </section>
+            </article>
+        </main>
+        <footer>Todos direitos reservados a <b>Brasil Mulando Entertainment</b></footer>
     </body>
 </html>
