--- a/hardskills/modulohtml/aula18/exercicio1/index.html
+++ b/hardskills/modulohtml/aula18/exercicio1/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <title>Aula 18 - Exercicio 1</title>
+        <meta property="og:image" content="images/SeloSeuCreyson.png" />
         <link rel="stylesheet" href="styles/defaultStyle.css">
         <script src="scripts/loadobject.js"></script>
     </head>
