--- a/hardskills/modulohtml/aula20/exercicio2/index.html
+++ b/hardskills/modulohtml/aula20/exercicio2/index.html
@@ -6,7 +6,7 @@
         <meta property="og:title" content="Aula 20 - Exercicio 2" />
         <meta property="og:description" content="Projeto criado para um exercicio da AlphaEdTech." />
         <meta property="og:type" content="website" />
-        <meta property="og:image" content="images/gato-feliz-1280x720.jpg" />
+        <meta property="og:image" content="images/budayingyang.png" />
         <meta property="og:image:width" content="300" />
         <meta property="og:image:height" content="300" />
         <link rel="stylesheet" href="styles/main.css">
