--- a/hardskills/modulohtml/aula21/exercicio0/index.html
+++ b/hardskills/modulohtml/aula21/exercicio0/index.html
@@ -2,9 +2,9 @@
 <html lang="pt-br">
     <head>
         <meta charset="utf-8">
-        <title>Aula 20 - Exercicio 2</title>
-        <meta property="og:title" content="Aula 20 - Exercicio 2" />
-        <meta property="og:description" content="Projeto criado para um exercicio da AlphaEdTech." />
+        <title>Aula 21 - Votação Lovelace</title>
+        <meta property="og:title" content="Resultado da Votação - Lovelace" />
+        <meta property="og:description" content="Projeto criado para uma votação da turma Lovelace da AlphaEdTech." />
         <meta property="og:type" content="website" />
         <meta property="og:image" content="images/lovelacelogo.png" />
         <meta property="og:image:width" content="300" />
