--- a/hardskills/modulohtml/aula23/index.html
+++ b/hardskills/modulohtml/aula23/index.html
@@ -11,7 +11,12 @@
         <header>
             <div>
                 <h1>Luis Gustavo C. Z. Pereira</h1>
-                <h4>Developer/Programmer</h4>
+                <h4>
+                    <span>Developer</span>
+                    /
+                    <span>Programmer</span>
+                </h4>
+                <h2>Curriculum Vitae</h2>
             </div>
             <nav id="menu"></nav>
         </header>
