--- a/hardskills/modulohtml/aula23/myself.html
+++ b/hardskills/modulohtml/aula23/myself.html
@@ -1,3 +1,78 @@
 <div>
-    
+    <div>
+        <div>
+            <h2>Eu mesmo</h2>
+            <p>Sou uma pessoa muito prática, amo a realidade, a filosofia e a ciência.</p>
+            <p><i>"No final, apenas três coisas importam: quanto você amou, quão gentilmente viveu, e quão graciosamente deixou de lado as coisas que não eram para você."</i> - Buda</p>
+        </div>
+        <div>
+            <hr>
+            <div>
+                <table>
+                    <tr>
+                        <td>
+                            <h3>Interesses</h3>
+                            <ul>
+                                <li>Programação</li>
+                                <li>Músicas</li>
+                                <li>Games</li>
+                            </ul>
+                        </td>
+                        <td>
+                            <h3>Desinteresses</h3>
+                            <ul>
+                                <li>Televisão</li>
+                                <li>Redes Sociais</li>
+                                <li>Frutos do Mar</li>
+                            </ul>
+                        </td>
+                    </tr>
+                </table>
+            </div>
+            <hr>
+            <div>
+                <h3></h3>
+                <table>
+                    <tbody>
+                        <tr class="skills-header"><td><h3>SoftSkills</h3></td></tr>
+                        <tr id="skillautoconhecimento">
+                            <td>Autoconhecimento</td>
+                            <td><img src="images/emote_star.png"><img src="images/emote_star.png"><img src="images/emote_star.png"><img src="images/emote_star.png"><img src="images/emote_star.png"></td>
+                        </tr>
+                        <tr id="skillcooperatividade">
+                            <td>Cooperatividade</td>
+                            <td><img src="images/emote_star.png"><img src="images/emote_star.png"><img src="images/emote_star.png"><img src="images/emote_star.png"><img src="images/emote_star.png"></td>
+                        </tr>
+                        <tr id="skillintelemocional">
+                            <td>Inteligencia Emocional</td>
+                            <td><img src="images/emote_star.png"><img src="images/emote_star.png"><img src="images/emote_star.png"><img src="images/emote_star.png"><img src="images/emote_star.png"></td>
+                        </tr>
+                        <tr id="skillcinesica">
+                            <td>Análise Cinésica</td>
+                            <td><img src="images/emote_star.png"><img src="images/emote_star.png"><img src="images/emote_star.png"><img src="images/emote_star.png"><img src="images/emote_star.png"></td>
+                        </tr>
+                    </tbody>
+                    <tbody>
+                        <tr class="skills-header"><td><h3>HardSkills</h3></td></tr>
+                        <tr id="skilleditimages">
+                            <td>Edição de Imagens</td>
+                            <td><img src="images/emote_star.png"><img src="images/emote_star.png"><img src="images/emote_star.png"><img src="images/emote_star.png"><img src="images/emote_star.png"></td>
+                        </tr>
+                        <tr id="skilldesign">
+                            <td>Design</td>
+                            <td><img src="images/emote_star.png"><img src="images/emote_star.png"><img src="images/emote_star.png"><img src="images/emote_star.png"><img src="images/emote_star.png"></td>
+                        </tr>
+                        <tr id="skillmodelagem">
+                            <td>Modelagem 3D</td>
+                            <td><img src="images/emote_star.png"><img src="images/emote_star.png"><img src="images/emote_star.png"><img src="images/emote_star.png"><img src="images/emote_star.png"></td>
+                        </tr>
+                        <tr id="skillanimacao">
+                            <td>Animação 3D</td>
+                            <td><img src="images/emote_star.png"><img src="images/emote_star.png"><img src="images/emote_star.png"><img src="images/emote_star.png"><img src="images/emote_star.png"></td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
 </div>
