--- a/hardskills/modulohtml/aula23/webdev.html
+++ b/hardskills/modulohtml/aula23/webdev.html
@@ -3,9 +3,10 @@
         <div>
             <h2>Desenvolvimento Web</h2>
             <p>Me sinto muito animado em atuar nesta área, na qual almejo realizar minhas ambições profissionais.</p>
-            <p><i>"Você é o único representante do seu sonho na face da terra, se isso não te faz correr atrás, eu não sei o que vai."</i> - Emicida</p>
+            <p><i>"Você é o único representante do seu sonho na face da terra, se isso não te fizer correr atrás, eu não sei o que vai."</i> - Emicida</p>
         </div>
         <div>
+            <hr>
             <div>
                 <h3>Formação</h3>
                 <p><strong>Desenvolvimento e Analise de Sistemas</strong>, IFPR. <i>(Em formação)</i></p>
