--- a/hardskills/modulohtml/aula23/contact.html
+++ b/hardskills/modulohtml/aula23/contact.html
@@ -1,24 +1,6 @@
 <div>
-    <div>
-        <div>
-            <h2>Contato</h2>
-            <p>Sinta-se livre pra entrar em contato, seja pra uma oferta de trabalho ou bater-papo.</p>
-            <p><i>“Irradie amor sem limites para o mundo inteiro, acima, abaixo e do outro lado, sem obstáculos, sem má vontade e sem inimizade.”</i> - Buda</p>
-        </div>
-        <div>
-            <ul>
-                <li>GitHub</li>
-                <li>Linkedin</li>
-                <li>Whatsapp</li>
-                <li>Instagram</li>
-            </ul>
-            <hr>
-            <div>
-                <h3>Email</h3>
-                <span>
-                    <a href="http://" target="_blank">Contatar</a>
-                </span>
-            </div>
-        </div>
-    </div>
+    <h2>Contato</h2>
+    <nav>
+
+    </nav>
 </div>
