--- a/hardskills/modulohtml/aula23/index.html
+++ b/hardskills/modulohtml/aula23/index.html
@@ -12,7 +12,7 @@
             <div>
                 <h1>Luis Gustavo C. Z. Pereira</h1>
                 <h4>
-                    <span>Developer</span>
+                    <span>Web Developer</span>
                     /
                     <span>Programmer</span>
                 </h4>
