--- a/hardskills/modulohtml/aula23/home.html
+++ b/hardskills/modulohtml/aula23/home.html
@@ -14,5 +14,12 @@
             <li>Aspirante de <strong>Desenvolvimento Web</strong> na AlphaEdTech.</li>
             <li>Hobby de <strong>Desenvolvimento de Games</strong> com Unity.</li>
         </ul>
+        <div>
+            <a href="http://" target="_blank" rel="noopener noreferrer">Instagram <img src="images/emote_heart.png"/></a>
+            <a href="http://" target="_blank" rel="noopener noreferrer">Whatsapp <img src="images/emote_heart.png"/></a>
+            <a href="http://" target="_blank" rel="noopener noreferrer">Linkedin <img src="images/emote_heart.png"/></a>
+            <a href="http://" target="_blank" rel="noopener noreferrer">Email <img src="images/emote_heart.png"/></a>
+        </div>
     </div>
+    <!--<img src="images/luisformal.png">-->
 </div>
